--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
     </div>
     
 
-    <script src="node_modules/axios/dist/axios.min.js"></script>
+    <!-- <script src="node_modules/axios/dist/axios.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
     <script src="javascript.js">
         
     </script>
